# Schemas

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/roblox/: fastflags.schema.json
docs/roblox/fastflags/: index.md
docs/schemas/roblox/: fastflags.md  fastflags.schema.json
docs/schemas/roblox/fastflags/: index.md
docs/schemas/smithpy/: modrinth_api.schema.json  policy.schema.json
docs/schemas/smithpy/modrinth_api/: index.md
docs/schemas/smithpy/policy/: index.md
docs/smithpy/: modrinth_api.schema.json  policy.schema.json
docs/smithpy/modrinth_api/: index.md
docs/smithpy/policy/: index.md
registry/roblox/: fastflags.yaml
registry/smithpy/: modrinth_api.yml  policy.yml
schemas/_meta/: registry.schema.json
tools/: generate_docs.py  generate_schemas.py  validate_registry.py
